--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "notistack": "^2.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4",
