--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.2.9",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "notistack": "^2.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-to-print": "^2.14.12",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
